mise ajour vercel et git1

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bibiabusness</title>
 
-   
     <!-- Favicon dans vercel-->
-    <link rel="icon" href="/fondbleufonce.png" type="image/png" />
+    <link rel="icon" href="/fondbleufonce.avif" type="image/avif" />
 
     <meta name="author" content="TIPTAMCode" />
     <meta name="robots" content="index, follow" />
-  
 
     <!-- Polices -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code:wght@400;500&display=swap"
       rel="stylesheet"
     />
-
-
   </head>
   <body>
     <div id="root"></div>
