--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/svg+xml" href="/img/fondbleufonce.png" />
+    <link rel="icon" type="image/svg+xml" href="/img/fondbleufonce.avif" />
 
     <!-- Titre de la page a coté du logo -->
     <title>Bibiabusness</title>
